--- a/styles.css
+++ b/styles.css
@@ -14,14 +14,13 @@ img{
 
 #map-canvas
 {
-        width: 400px;
-        height: 400px;
-        align-items: center;
-         margin-top: 80px;
-		 margin-bottom: 80px;
-         margin-right: 80px;
-	     margin-left: 100px;
-
+        width: 300px;
+        height: 300px;
+     	
+         margin-top: 10px;
+		 margin-bottom: 10px;
+         margin-right: auto;
+	     margin-left: auto;
 }
 
 
