--- a/styles.css
+++ b/styles.css
@@ -11,41 +11,40 @@ img{
 }
 
 /*cover */
-
+/*.container
+{
+	height: 100%;
+}*/
 #map-canvas
 {
-        width: 300px;
-        height: 300px;
-     	
-         margin-top: 10px;
-		 margin-bottom: 10px;
+        width: 40vh;
+        height: 40vh;     	
+         margin-top: 40px;
+		 margin-bottom: 40px;
          margin-right: auto;
 	     margin-left: auto;
 }
-
-
-
-
 #cover {
 	/*background: #222 url('img/yellow.png') center top no-repeat;*/
 	background-color: yellow;
-	background-size: cover;*/
+	background-size: cover;
 	color: black;
 	height: 100%;
 	text-align: center;
 	display: flex;
 	align-items: center;
 	}
-
 #cover-caption{
 	width: 100%;
+	background-color: yellow;
+	background-size: cover;
+	color: black;
+	height: 100%;
+	text-align: center;
+	/*display: flex;*/
+	align-items: center;
+	padding-top: 0.8em;
 }
-
-.section-content{
-	padding: 5rem 0;
-	
-}
-
 #footer-main {
 	background: #222;
 	color: white;
@@ -53,14 +52,5 @@ img{
 	padding: 2.5rem 0;
 }
 
-#login
-{	
-	background-size: cover;
-	height: 100%;
-	text-align: center;
-	display: flex;
-	align-items: center;
-	width: 100%;
-}
 
 
